src-tauri/tests/snapshots/stream_partial_coalescing__coalesce_partial_then_error_flushes_first.snap
---
source: tests/stream_partial_coalescing.rs
expression: h.wire
---
- t_ms: 0
  kind: streamingPartial
  body:
    - a
- t_ms: 10
  kind: streamingPartial
  body:
    - abc
- t_ms: 10
  kind: error
  body:
    - boom
