src-tauri/tests/snapshots/stream_partial_coalescing__coalesce_partial_then_full_drops_superseded_partial.snap
---
source: tests/stream_partial_coalescing.rs
expression: h.wire
---
- t_ms: 0
  kind: streamingPartial
  body:
    - a
- t_ms: 10
  kind: update
  body:
    - "assistant: abc"
