src-tauri/tests/snapshots/stream_partial_coalescing__coalesce_slow_stream_adds_no_latency.snap
---
source: tests/stream_partial_coalescing.rs
expression: h.wire
---
- t_ms: 0
  kind: streamingPartial
  body:
    - "slow "
- t_ms: 50
  kind: streamingPartial
  body:
    - "slow stream "
- t_ms: 100
  kind: streamingPartial
  body:
    - slow stream here
